Modified index and newly added index

--- a/00-odin-recipes/recipes/index.html
+++ b/00-odin-recipes/recipes/index.html
@@ -8,5 +8,11 @@
 <body>
     <h1>Recipes for Odin Project</h1>
     <p>deebido!!</p>
+
+    <ul>
+    <li><a href="sinigang.html">Sinigang go</a></li>
+    <li><a href="sushi.html">Sushi go</a></li>
+    <li><a href="adobo.html">Adobo go</a></li>
+</ul>
 </body>
 </html>
